cluster/apps/_common/netpols/allow-all-ingress-controller.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-controller
spec:
  podSelector: {}
  ingress:
    # Allow traffic from traefik
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: "networking"
