cluster/apps/_common/netpols/allow-namespace-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-namespace-ingress
spec:
  podSelector: {}
  ingress:
    - from:
        - podSelector: {}
