cluster/apps/_common/netpols/allow-prometheus-metrics-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-metrics-ingress
spec:
  podSelector: {}
  ingress:
    # Allow traffic from prometheus-metrics
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: "monitoring"
